# hilary_fastapi

fast_basic/: app.py  docker-compose.yml  dockerfile  pyproject.toml
